--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,12 @@
   			<groupId>org.springframework.boot</groupId>
  			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+		<dependency>
+    		<groupId>software.amazon.awssdk</groupId>
+    		<artifactId>s3</artifactId>
+    		<version>2.25.45</version>
+		</dependency>
+
 
 	</dependencies>
 
@@ -129,5 +135,6 @@
 			</plugin>
 		</plugins>
 	</build>
+	
 
 </project>
